--- a/request-history-1.html
+++ b/request-history-1.html
@@ -73,24 +73,24 @@
 	      "yearsToShow": [2012],
 	      "dateElement": $(".date-manager"),
 	      "filtersElement": $(".filters"),
-	      "filterTypeElement": $("#requestHistoryType"),
-	      "filterStatusElement": $("#requestHistoryStatus"),
+	      "filterTypeElement": $("#serviceRequestType"),
+	      "filterStatusElement": $("#serviceRequestStatus"),
 	      "historyElement": $("#accordions"),
 	      "state": defaultHistoryState
 	  };
 	
 	
 		// initialize the service request history components
-		requestHistory.history(defaultHistoryParams);
+		serviceRequest.history(defaultHistoryParams);
 
 	  // handle hash change for service request history
 	  $(window).bind("hashchange", function (e) {
 	      // shallow copy the defaultHistoryParams.state before extending with $.deparam.fragment, otherwise the default is updated because of reference assignment
-	      requestHistory.history.showHistory($.extend($.extend({}, defaultHistoryParams.state), $.deparam.fragment()));
+	      serviceRequest.history.showHistory($.extend($.extend({}, defaultHistoryParams.state), $.deparam.fragment()));
 	
 				// This needs to be here or hitting your browsers back button will not change the widget
-				// I tried adding this to the requestHistory.history.showHistory(), but it did not seam to work.
-				$('.date-manager').dateManager('hashChange');
+				// I tried adding this to the serviceRequest.history.showHistory(), but it did not seam to work.
+				$('.date-manager').dateManager('setDate');
 	  });
 
 	  // first time, trigger the hash change to show the default history or reflect a bookmarked or linked hash
@@ -166,7 +166,7 @@
 				<div class="filters">
 					<label class="form-element-right form-element">
 						<span>Status</span>
-						<select name="requestHistoryStatus" id="requestHistoryStatus">
+						<select name="serviceRequestStatus" id="serviceRequestStatus">
 							<option value="open">Open Requests</option>
 							<option value="close">Closed Requests</option>
 							<option value="all">All Requests</option>
@@ -174,7 +174,7 @@
 					</label>
 					<label class="form-element">
 						<span>Show me</span>
-						<select name="requestHistoryType" id="requestHistoryType">
+						<select name="serviceRequestType" id="serviceRequestType">
 							<option value="apartment">My Apartment</option>
 							<option value="common">Common Area</option>
 							<option value="all">All</option>
