--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
 				<form method="POST" action="select-a-lease.html">
 					<h3>Please Sign In</h3>
 					<p class="error"> &nbsp;Whoops! We didn’t recognize your username or password. </p>
-					<p><input type="text" class="autoclear" name="email" id="email" value="Email Address"></p>
-					<p><input type="password" class="autoclear" name="password" id="password" value="password"></p>
+					<ul>
+						<li><input type="text" class="autoclear" name="email" id="email" value="Email Address"></li>
+						<li><input type="password" class="autoclear" name="password" id="password" value="password"></li>
+					</ul>
 					<div class="submit-area-right">
 						<button type="submit" class="submit"><span>Sign In</span><span class="end"> &nbsp; </span></button>
 					</div>
