--- a/request-history-1.html
+++ b/request-history-1.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="css/accordion.css">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
+  <link rel="stylesheet" href="css/forms.css">
 	<!--[if lt IE 9]>
 	  <link rel="stylesheet" href="css/ie.css">
 	<![endif]-->
