--- a/contact-information.html
+++ b/contact-information.html
@@ -27,6 +27,7 @@
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/accordion.css">
   <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
+  <link rel="stylesheet" href="css/forms.css">
    <link rel="stylesheet" href="css/globalTHintegration.css">
 	<!--[if lt IE 9]>
 	  <link rel="stylesheet" href="css/ie.css">
