--- a/register.html
+++ b/register.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="css/global.css"> <!-- Added Styles For All Pages -->
   <link rel="stylesheet" href="css/fonts.css"> <!-- Added Styles For All Pages -->
   <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
+  <link rel="stylesheet" href="css/forms.css">
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
