--- a/request-sent.html
+++ b/request-sent.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/accordion.css">
   <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
+  <link rel="stylesheet" href="css/forms.css">
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
