--- a/signin-error.html
+++ b/signin-error.html
@@ -23,7 +23,6 @@
   <link rel="stylesheet" href="css/reset.css"> <!-- Eric Meyer Stylesheet -->
   <link rel="stylesheet" href="css/style.css"> <!-- Default Stylesheet -->
   <link rel="stylesheet" href="css/global.css"> <!-- Added Styles For All Pages -->
-  <link rel="stylesheet" href="css/globalTHintegration.css">
   <link rel="stylesheet" href="css/fonts.css"> <!-- Added Styles For All Pages -->
   <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
   <link rel="stylesheet" href="css/forms.css">
@@ -50,11 +49,11 @@
 
   <!-- scripts concatenated and minified via build script -->
   <script src="js/jquery.cookie.js"></script>
-	<script src="js/browserimage.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
-  <script src="js/yearpicker.js"></script>
-  <script src="js/servicerequest.js"></script>
+	<script src="js/browserimage.js"></script>
+  <script src="js/datemanager.js"></script>
+  <script src="js/request-history.js"></script>
 
   <!-- end scripts -->
 
@@ -64,33 +63,52 @@
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_1.jpg" >
   </div>
-	<script type="text/javascript">Background.init(); </script>
-  <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
-       chromium.org/developers/how-tos/chrome-frame-getting-started -->
-  <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
+	<script type="text/javascript">global.background.init(); </script><!-- This needs to be here to resize this before the page finishes loading instead of after -->
   <header>
 		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 		</div>
-</header>
+  </header>
   <div role="main" id="main" class="clearfix">
 		<div id="signin" class="titled-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div >				
-					<h1>We sent you an email</h1>
-					<p>
-						In the next few minutes you'll receive a link to reset your password.<br>
-						Remember to check your spam folder if you don't see it right away.				
-					</p>
-					<br />
-					<p>
-						If you have an issue or don't receive the password email, contact your leasing office at:<br>
-						555-555-5555 or email@archstone.com.
-					</p>
-					<div class="backtosignin">
-						<a href="">< Back to sign in</a>
+			<div class="body1">
+				<p>With exclusive access to our resident-only web sites, hop on any computer with Internet access to:</p>
+				<ul>
+					<li>Pay your rent online</li>
+					<li>Submit and track service requests</li>
+					<li>Find community forms and policies</li>
+					<li>And much, much more...</li>
+				</ul>
+				<p>Log in now to get started!</p>
+			</div>
+			<div class="body2">
+				<form method="POST" action="select-a-lease.html" id="select-a-lease-firn">
+					<h3>Please Sign In</h3>
+					<!-- <p class="error"> &nbsp;Whoops! We didn’t recognize your username or password. </p> -->
+					<ul class="form-with-validation">
+						<li>
+							<!-- 
+							note to MVC3-coders:
+							youi'll need to add the autoclear class to the input, and set the value="Guest" (or whatever you want the default to be).
+							 -->
+							<input data-val="true" data-val-required="Guest Name is required" id="GuestName" name="GuestName" tabindex="2" type="text" value="Guest" class="input-validation-error autoclear" />
+							<span class="ui-state-error-text field-validation-error" data-valmsg-for="GuestName" data-valmsg-replace="true">
+								<span for="GuestName" generated="true" class="" style="">Guest Name is required</span>
+							</span>
+						</li>
+						<li><input type="password" class="autoclear" name="password" id="password" value="password"></li>
+					</ul>
+					<div class="submit-area-right">
+						<button type="submit" class="submit"><span>Sign In</span><span class="end"> &nbsp; </span></button>
 					</div>
+					<div class="remember-area">
+						<input type="checkbox" name="remember_email" id="remember-email">
+						<p><label for="remember-email">Remember my email</label></p>
+						<p><a href="#">Forgot password?</a></p>
+					</div>
+				</form>
 			</div>
 			<p class="box-footer"><span></span></p>
 		</div>
@@ -112,7 +130,7 @@
   </div>
   <footer>
 		<div class="navigation">
-			<a href="#">ArchstoneApartments.com</a>
+			<a href="/">ArchstoneApartments.com</a>
 		</div>
 		<div class="copyright">
 				<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
