--- a/dont-have-account.html
+++ b/dont-have-account.html
@@ -50,11 +50,10 @@
 
   <!-- scripts concatenated and minified via build script -->
   <script src="js/jquery.cookie.js"></script>
-	<script src="js/browserimage.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
-  <script src="js/yearpicker.js"></script>
-  <script src="js/servicerequest.js"></script>
+	<script src="js/browserimage.js"></script>
+  <script src="js/nav.js"></script>
 
   <!-- end scripts -->
 
@@ -64,7 +63,7 @@
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_1.jpg" >
   </div>
-	<script type="text/javascript">Background.init(); </script>
+	<script type="text/javascript">global.background.init(); </script>
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -81,12 +80,11 @@
 				<form method="POST" action="select-a-lease.html">
 					<h1>Dont have an account?</h1>
 					<p class="form-note">Please fill out the following information and we'll send you an email to activate your account</p>
-					<label for="email">Email Address</label>
-					<input type="text" name="email" value="" />
-					<label for="community">Your Community</label>
-					<input type="text" name="community" value="" />
-					<label for="address">Your Address</label>
-					<input type="text" name="address" value"" />	
+					<ul class="form-with-validation">
+						<li><input type="text" name="email" value="Email Address" class="autoclear"></li>
+						<li><input type="text" name="community" value="Your Community" class="autoclear"></li>
+						<li><input type="text" name="address" value="Your Address" class="autoclear"></li>
+					</ul>
 					<div class="submit-area-right">
 						<button type="submit" class="submit"><span>Send</span><span class="end"> &nbsp; </span></button>
 					</div>
