--- a/signin-error.html
+++ b/signin-error.html
@@ -52,8 +52,7 @@
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
 	<script src="js/browserimage.js"></script>
-  <script src="js/datemanager.js"></script>
-  <script src="js/request-history.js"></script>
+  <script src="js/nav.js"></script>
 
   <!-- end scripts -->
 
