--- a/index.html
+++ b/index.html
@@ -68,35 +68,35 @@
 		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 		</div>
-  </header>
+</header>
   <div role="main" id="main" class="clearfix">
 		<div id="signin" class="titled-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
 			<div class="body1">
-				<p>With exclusive access to our resident-only web sites, hop on any computer with Internet access to:</p>
+				<p class="body-font-12">With exclusive access to our resident-only web sites, hop on any computer with Internet access to:</p>
 				<ul>
 					<li>Pay your rent online</li>
 					<li>Submit and track service requests</li>
 					<li>Find community forms and policies</li>
 					<li>And much, much more...</li>
 				</ul>
-				<p>Log in now to get started!</p>
+				<p class="body-font-12">Log in now to get started!</p>
 			</div>
 			<div class="body2">
 				<form method="POST" action="select-a-lease.html">
 					<h3>Please Sign In</h3>
 					<ul class="form-with-validation">
-						<li><input type="text" class="autoclear" name="email" id="email" value="Email Address"></li>
-						<li><input type="password" class="autoclear" name="password" id="password" value="password"></li>
+						<li><input type="text" class="autoclear" name="email" id="email" value="Email address"></li>
+						<li><input type="password" class="autoclear" name="password" id="password" value="Password"></li>
 					</ul>
 					<div class="submit-area-right">
 						<button type="submit" class="submit"><span>Sign In</span><span class="end"> &nbsp; </span></button>
 					</div>
 					<div class="remember-area">
 						<input type="checkbox" name="remember_email" id="remember-email">
-						<p><label for="remember-email">Remember my email</label></p>
-						<p><a href="#">Forgot password?</a></p>
+						<p class="body-font-12"><label for="remember-email">Remember my email</label></p>
+						<p class="body-font-12-teal"><a href="#">Forgot password?</a></p>
 					</div>
 				</form>
 			</div>
