--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <script src="js/script.js"></script>
 	<script src="js/browserimage.js"></script>
   <script src="js/datemanager.js"></script>
-  <script src="js/request-history.js"></script>
+  <script src="js/service-request.js"></script>
 
   <!-- end scripts -->
 
