updating files per eventum notes.

--- a/reset-your-password.html
+++ b/reset-your-password.html
@@ -77,7 +77,7 @@
 		<div id="signin" class="titled-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div >
+			<div class="body-font-14">
 				<form method="POST" action="we-sent-you-email.html">
 					<h1>Reset your password</h1>
 					<p class="form-note">Please answer one of your security questions to reset your password.</p><br />
@@ -95,7 +95,7 @@
 						<button type="submit" class="submit"><span>Continue</span><span class="end"> &nbsp; </span></button>
 					</div>
 					<div class="backtosignin">
-						<a href="">< Back to sign in</a>
+						<a href=""><img src="images/icon_back_arrow_teal.png"> Back to sign in</a>
 					</div>					
 				</form>
 			</div>
