--- a/select-lease.html
+++ b/select-lease.html
@@ -77,7 +77,7 @@
 		<div id="signin" class="titled-box clearfix">
 			<h1 class="box-title"><span>Select a lease you would like to open</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div >
+			<div class="body-font-14">
 				<form method="POST" action="select-a-lease.html">
 					<p class="content-padding"><input type="radio" name="lease1" /> [Apartment Address], [Customer Name], [Community]</p>
 					<p class="content-padding"><input type="radio" name="lease1" /> 123 Main St #101, John Smith, Archstone Englewood</p>
@@ -92,7 +92,7 @@
 			<p class="box-footer"><span></span></p>
 		</div>
 		
-		<div class="photo-box left clearfix">
+		<!--<div class="photo-box left clearfix">
 			<p><strong>OPTIONAL</strong><br/>MARKETING<br/>REAL<br/>ESTATE</p>
 			<img src="images/puppy.png">
 		</div>
@@ -104,7 +104,7 @@
 				<a href="#" class="button-iphone"> &nbsp; </a>
 			</div>
 			<p class="box-footer"><span></span></p>
-		</div>
+		</div>-->
 		
   </div>
   <footer>
