--- a/activation-email-sent.html
+++ b/activation-email-sent.html
@@ -77,7 +77,7 @@
 		<div id="signin" class="titled-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div >
+			<div class="body-font-14">
 					<h1>Activation Email Sent</h1>
 					<p>
 						In the next few minutes you'll receive an activation email from utopia.<br>
@@ -89,7 +89,7 @@
 						555-555-5555 or email@archstone.com.
 					</p>
 					<div class="backtosignin">
-						<a href="">< Back to sign in</a>
+						<a href=""><img src="images/icon_back_arrow_teal.png"> Back to sign in</a>
 					</div>
 			</div>
 			<p class="box-footer"><span></span></p>
