--- a/choose-new-password.html
+++ b/choose-new-password.html
@@ -77,7 +77,7 @@
 		<div id="signin" class="titled-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div >
+			<div class="body-font-14">
 				<form method="POST" action="select-a-lease.html">
 					<h1>Choose your new password</h1>
 					<p class="form-note-alert">Your caps lock is on</p><br />
@@ -98,7 +98,7 @@
 						<button type="submit" class="submit"><span>Use this password and sign in</span><span class="end"> &nbsp; </span></button>
 					</div>
 					<div class="backtosignin">
-						<a href="">< Back to sign in</a>
+						<a href=""><img src="images/icon_back_arrow_teal.png"> Back to sign in</a>
 					</div>					
 				</form>
 			</div>
