--- a/forgot-your-password.html
+++ b/forgot-your-password.html
@@ -77,7 +77,7 @@
 		<div id="signin" class="titled-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div >
+			<div class="body-font-14">
 				<form method="POST" action="we-sent-you-email.html">
 					<h1>Forgot your password?</h1>
 					<p class="form-note">We'll send you a link to reset it.</p><br />
@@ -87,7 +87,7 @@
 						<button type="submit" class="submit"><span>Send me the link</span><span class="end"> &nbsp; </span></button>
 					</div>
 					<div class="backtosignin">
-						<a href="">< Back to sign in</a>
+						<a href=""><img src="images/icon_back_arrow_teal.png"> Back to sign in</a>
 					</div>					
 				</form>
 			</div>
