--- a/something-went-wrong.html
+++ b/something-went-wrong.html
@@ -77,7 +77,7 @@
 		<div id="signin" class="titled-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div >				
+			<div class="body-font-14">				
 					<h1>Something went wrong!</h1>
 					<p>
 						We weren't able to confirm all of the information for your myarchstone.com account.				
@@ -88,7 +88,7 @@
 						555-555-5555 or email@archstone.com.
 					</p>
 					<div class="backtosignin">
-						<a href="">< Back to sign in</a>
+						<a href=""><img src="images/icon_back_arrow_teal.png"> Back to sign in</a>
 					</div>
 			</div>
 			<p class="box-footer"><span></span></p>
