--- a/request-history.html
+++ b/request-history.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="css/style.css"> <!-- Default Stylesheet -->
   <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
   <link rel="stylesheet" href="css/global.css"> <!-- Added Styles For All Pages -->
+  <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/forms.css">
   <link rel="stylesheet" href="css/accordion.css">
   <link rel="stylesheet" href="css/fonts.css">
