Renaming images to conform with standards.

--- a/account-summary.html
+++ b/account-summary.html
@@ -95,14 +95,14 @@
 			
 			<div class="clearfix">
 				<div class="top-box float-left">
-					<div class="title"><img src="images/icon_currentBalBars.png" />&nbsp;&nbsp;<span class="pad-top">CURRENT BALANCE</span></div>
+					<div class="title"><img src="images/icon_current_bal_bars.png" />&nbsp;&nbsp;<span class="pad-top">CURRENT BALANCE</span></div>
 					<div class="current-bg"><div class="position-price">$1,837.98</div></div>
-					<div class="teal-toolbar"><a href="">Pay Now<span class="float-right"><img class="circle-arrow" src="images/icon_circleArrow.png"/></span></a></div>
-					<div class="teal-toolbar"><a href="">View History<span class="float-right"><img class="circle-arrow" src="images/icon_circleArrow.png"/></span></a></div>
+					<div class="teal-toolbar"><a href="">Pay Now<span class="float-right"><img class="circle-arrow" src="images/icon_circle_arrow.png"/></span></a></div>
+					<div class="teal-toolbar"><a href="">View History<span class="float-right"><img class="circle-arrow" src="images/icon_circle_arrow.png"/></span></a></div>
 				</div>
 				
 				<div class="top-box float-right lease-container">
-					<div class="title"><img src="images/icon_leaseHouse.png" />&nbsp;&nbsp;<span class="pad-top">LEASE</span><span class="float-right lease-date">Expires October 31, 2012</span></div>
+					<div class="title"><img src="images/icon_lease_house.png" />&nbsp;&nbsp;<span class="pad-top">LEASE</span><span class="float-right lease-date">Expires October 31, 2012</span></div>
 					<div class="lease-bg">
 						<div class="lease-positioning">
 							That's only...
@@ -113,7 +113,7 @@
 						</div>
 					</div>
 					
-					<div class="teal-toolbar view-lease-toolbar"><a href="">View Lease<span class="float-right"><img class="circle-arrow" src="images/icon_circleArrow.png"/></span></a></div>
+					<div class="teal-toolbar view-lease-toolbar"><a href="">View Lease<span class="float-right"><img class="circle-arrow" src="images/icon_circle_arrow.png"/></span></a></div>
 				</div>
 			</div>
 			
