--- a/request-sent.html
+++ b/request-sent.html
@@ -49,7 +49,7 @@
   <!-- end scripts -->
 
 </head>
-<body class="signed-in request-sent">
+<body class="signed-in">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_graphite_burst.png" >
@@ -88,7 +88,7 @@
   </header>
 
   <div role="main" id="main" class="clearfix">
-		<div id="request-sent" class="titled-box clearfix">
+		<div id="request-sent" class="large-titled-box titled-box clearfix">
 			<h1 class="box-title"><span>SERVICE REQUEST SENT!</span></h1>
 			<div class="body">
 				<h2>You will receive an email shortly confirming your request.</h2>
