--- a/service-request.html
+++ b/service-request.html
@@ -89,8 +89,8 @@
 		<!-- Secondary Navigation -->
 		<div class="secondary-nav-contents">
 			<ul class="secondary-nav">
-				<li><a href="service-request.html">New Request</a></li>
-				<li><a href="request-history.html" class="active">Previous Requests</a></li>
+				<li><a href="service-request.html" class="active">New Request</a></li>
+				<li><a href="request-history.html">Previous Requests</a></li>
 			</ul>
 		</div>
 		<!-- /Secondary Navigation -->
