--- a/request-sent.html
+++ b/request-sent.html
@@ -18,38 +18,37 @@
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="width=device-width">
 
-  <!-- Use this in all pages -->
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
+
   <link rel="stylesheet" href="css/reset.css"> <!-- Eric Meyer Stylesheet -->
   <link rel="stylesheet" href="css/style.css"> <!-- Default Stylesheet -->
-  <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
   <link rel="stylesheet" href="css/global.css"> <!-- Added Styles For All Pages -->
-  <link rel="stylesheet" href="css/forms.css">
-  <link rel="stylesheet" href="css/accordion.css">
   <link rel="stylesheet" href="css/fonts.css">
-	<!--[if lt IE 9]>
-	  <link rel="stylesheet" href="css/ie.css">
-	<![endif]-->
-	<!--[if IE 9]>
-	  <link rel="stylesheet" href="css/ie9.css">
-	<![endif]-->
+  <link rel="stylesheet" href="css/accordion.css">
+  <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
 
-  <!-- Use this in all pages -->
+  <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
+
+  <!-- All JavaScript at the bottom, except this Modernizr build.
+       Modernizr enables HTML5 elements & feature detects for optimal performance.
+       Create your own custom Modernizr build: www.modernizr.com/download/ -->
   <script src="js/libs/modernizr-2.5.3.min.js"></script>
+
+  <!-- JavaScript in the header so my other stuff doesn't break -->
+
+  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
   <script src="js/jquery-1.7.2.min.js"></script>
   <script src="js/ui/jquery-ui-1.8.20.custom.js"></script>
-  <script src="js/jquery-bbq.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/browserimage.js"></script>
-  <script src="js/nav.js"></script>
-  
+
   <!-- scripts concatenated and minified via build script -->
   <script src="js/jquery.cookie.js"></script>
- 
+  <script src="js/plugins.js"></script>
+  <script src="js/script.js"></script>
+	<script src="js/browserimage.js"></script>
   <!-- end scripts -->
 
 </head>
-<body class="signed-in">
+<body class="signed-in request-sent">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_graphite_burst.png" >
@@ -80,7 +79,7 @@
 		<!-- Secondary Navigation -->
 		<div class="secondary-nav-contents">
 			<ul class="secondary-nav">
-				<li><a href="service-request.html" class="active">New Request</a></li>
+				<li><a href="service-request.html">New Request</a></li>
 				<li><a href="request-history.html">Previous Requests</a></li>
 			</ul>
 		</div>
@@ -88,7 +87,7 @@
   </header>
 
   <div role="main" id="main" class="clearfix">
-		<div id="request-sent" class="large-titled-box titled-box clearfix">
+		<div id="request-sent" class="large-titled-box clearfix">
 			<h1 class="box-title"><span>SERVICE REQUEST SENT!</span></h1>
 			<div class="body">
 				<h2>You will receive an email shortly confirming your request.</h2>
@@ -162,34 +161,18 @@
 		</div>
   </div>
   <footer>
-		<div class="navigation">
-			<a href="#">Privacy Policy</a>  |  <a href="/">ArchstoneApartments.com</a>
+		<div class="right">
+			<a href="dialog-email.html" class="cta-dialog" rel="footer" title="Contact Us">Contact Us</a>
 		</div>
-		<div class="copyright">
-			<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a>
+		<div class="left">
+			<p>Champions Park  |  2525 E. 104th Ave., Thornton, CO 80233  |  (866) 914-9716</p>
+			<p>
+				<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
+				<a href="#">Privacy Policy</a> | 
+				<a href="/">ArchstoneApartments.com</a>
+			</p>
 		</div>
   </footer>
-
-
-	<!-- Hidden Email Dialog -->
-	<div id="mail" class="titled-box">
-		<form action="index.html" method="POST">
-			<div class="form-element">
-				<label class="form-label">To:</label>
-				<select name="mail-to">
-					<option value="andrew_wyndertyne@archstoneapartments.com">andrew_wyndertyne@archstoneapartments.com</option>
-				</select>
-			</div>
-			<div class="form-element">
-				<label class="form-label">Subject:</label>
-				<input type="text" name="mail-subject">
-			</div>
-			<p><textarea name="mail-body" rows="5" cols="20"></textarea></p>
-			<p class="submit-area">
-				<button type="submit" class="submit"><span>Send</span><span class="end"> &nbsp; </span></button>
-			</p>
-		</form>
-	</div>
 
   <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
        mathiasbynens.be/notes/async-analytics-snippet -->
