--- a/request-sent.html
+++ b/request-sent.html
@@ -60,7 +60,7 @@
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 			<ul class="primary-nav">
 				<li><a href="#" title="Contact Us">Payment</a></li>
-				<li><a href="service-request.html">Service</a></li>
+				<li class="active"><a href="service-request.html">Service</a></li>
 				<li><a href="#">Information</a></li>
 				<li><a href="#" class="cta-lease">Lease</a></li>
 				<!-- <li class="half-pint">
