--- a/register.html
+++ b/register.html
@@ -74,7 +74,7 @@
 		<div id="register" class="titled-box clearfix">
 			<h1 class="box-title"><span>DON'T HAVE AN ACCOUNT?</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div class="body">
+			<div class="padded">
 				<form action="POST" method="index.html">
 					<h3>Please fill out the following information and we'll send you an email to activate your account</h3>
 					<p class="error"> &nbsp; </p>
