--- a/signin-error.html
+++ b/signin-error.html
@@ -72,7 +72,7 @@
 		<div id="signin" class="titled-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div class="body1">
+			<div class="body-left">
 				<p>With exclusive access to our resident-only web sites, hop on any computer with Internet access to:</p>
 				<ul>
 					<li>Pay your rent online</li>
@@ -82,7 +82,7 @@
 				</ul>
 				<p>Log in now to get started!</p>
 			</div>
-			<div class="body2">
+			<div class="body-right">
 				<form method="POST" action="select-a-lease.html" id="select-a-lease-firn">
 					<h3>Please Sign In</h3>
 					<!-- <p class="error"> &nbsp;Whoops! We didn’t recognize your username or password. </p> -->
