--- a/account-settings.html
+++ b/account-settings.html
@@ -18,14 +18,17 @@
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="width=device-width">
 
- <!-- Use this in all pages -->
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
+
   <link rel="stylesheet" href="css/reset.css"> <!-- Eric Meyer Stylesheet -->
   <link rel="stylesheet" href="css/style.css"> <!-- Default Stylesheet -->
-  <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
   <link rel="stylesheet" href="css/global.css"> <!-- Added Styles For All Pages -->
-  <link rel="stylesheet" href="css/forms.css">
-  <link rel="stylesheet" href="css/accordion.css">
+  <link rel="stylesheet" href="css/globalTHintegration.css">
+  <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/fonts.css">
+  <link rel="stylesheet" href="css/accordion.css">
+  <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
+  <link rel="stylesheet" href="css/forms.css">
 	<!--[if lt IE 9]>
 	  <link rel="stylesheet" href="css/ie.css">
 	<![endif]-->
@@ -33,18 +36,24 @@
 	  <link rel="stylesheet" href="css/ie9.css">
 	<![endif]-->
 	
-  <!-- Use this in all pages -->
+  <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
+
+  <!-- All JavaScript at the bottom, except this Modernizr build.
+       Modernizr enables HTML5 elements & feature detects for optimal performance.
+       Create your own custom Modernizr build: www.modernizr.com/download/ -->
   <script src="js/libs/modernizr-2.5.3.min.js"></script>
+
+  <!-- JavaScript in the header so my other stuff doesn't break -->
+
+  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
   <script src="js/jquery-1.7.2.min.js"></script>
   <script src="js/ui/jquery-ui-1.8.20.custom.js"></script>
-  <script src="js/jquery-bbq.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/browserimage.js"></script>
-  <script src="js/nav.js"></script>
-  
+
   <!-- scripts concatenated and minified via build script -->
   <script src="js/jquery.cookie.js"></script>
+	<script src="js/browserimage.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/script.js"></script>
   <script src="js/nav.js"></script>
   <!-- end scripts -->
 
@@ -83,7 +92,7 @@
   </header>
 
   <div role="main" id="main" class="clearfix">
-		<div id="service-request" class="accordion-box large-titled-box clearfix">
+		<div id="service-request" class="accordion-box squared-box clearfix">
 			<h1 class="box-title"><span>ACCOUNT SETTINGS</span></h1>
 			<div >
 				<form method="POST" action="select-a-lease.html">
