--- a/request-sent.html
+++ b/request-sent.html
@@ -87,9 +87,9 @@
   </header>
 
   <div role="main" id="main" class="clearfix">
-		<div id="request-sent" class="large-titled-box clearfix">
+		<div id="request-sent" class="squared-box clearfix">
 			<h1 class="box-title"><span>SERVICE REQUEST SENT!</span></h1>
-			<div class="body">
+			<div class="padded">
 				<h2>You will receive an email shortly confirming your request.</h2>
 				<p>Thanks for letting us respond to the issue. We'll respond to your request as soon as we can. For service requests concerning your apartment, we promise to respond within 24 hours.</p>
 				<p>If you have an emergency and need to contact someone immediately, please call:</p>
