--- a/service-request.html
+++ b/service-request.html
@@ -97,9 +97,9 @@
   </header>
 
   <div role="main" id="main" class="clearfix">
-		<div id="service-request" class="accordion-box large-titled-box clearfix">
+		<div id="service-request" class="squared-box clearfix">
 			<h1 class="box-title"><span>NEW SERVICE REQUEST</span></h1>
-			<div class="body accordion accordion-body">
+			<div class="accordion squared-accordion">
 				<h2>My Apartment</h2>
 				<div>
 					<form action="request-sent.html" method="POST">
