--- a/select-a-lease.html
+++ b/select-a-lease.html
@@ -54,10 +54,10 @@
   <!-- end scripts -->
 
 </head>
-<body class="signed-in select-a-lease">
+<body class="select-a-lease">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
-		<img class="source-image" src="images/bkgd_graphite_burst.png" >
+		<img class="source-image" src="images/bkgd_1.jpg" >
   </div>
 	<script type="text/javascript">global.background.init(); </script><!-- This needs to be here to resize this before the page finishes loading instead of after -->
   <header>
@@ -69,32 +69,30 @@
 		<div id="select-a-lease" class="titled-box clearfix list-form">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div class="padded">
-				<form action="request-history.html" method="POST">
+			<form action="request-history.html" method="POST">
 
-					<div class="form-element">
-						<input type="radio" value="0" name="lease-location" id="location-0">
-						<label for="location-0">[ Apartment Address ] Customer Name [ Community ]</label>
-					</div>
+				<div class="form-element">
+					<input type="radio" value="0" name="lease-location" id="location-0">
+					<label for="location-0">[ Apartment Address ] Customer Name [ Community ]</label>
+				</div>
 
-					<div class="form-element">
-						<input type="radio" value="1" name="lease-location" id="location-1">
-						<label for="location-1">123 Main Street #101, Genvieve Cornhill, Archstone Englewood</label>
-					</div>
+				<div class="form-element">
+					<input type="radio" value="1" name="lease-location" id="location-1">
+					<label for="location-1">123 Main Street #101, Genvieve Cornhill, Archstone Englewood</label>
+				</div>
 
-					<div class="form-element">
-						<input type="radio" value="2" name="lease-location" id="location-2">
-						<label for="location-2">456 Spruce Street #12, Genevieve Cornhill, Archstone
-					</label></div>
+				<div class="form-element">
+					<input type="radio" value="2" name="lease-location" id="location-2">
+					<label for="location-2">456 Spruce Street #12, Genevieve Cornhill, Archstone
+				</label></div>
 
-					<p class="submit-area">
-						<button class="submit"><span>Cancel</span><span class="end"> &nbsp; </span></button>
-						&nbsp;&nbsp;&nbsp;&nbsp;
-						<button type="submit" class="submit"><span>Continue</span><span class="end"> &nbsp; </span></button>
-					</p>
+				<p class="submit-area">
+					<button class="submit"><span>Cancel</span><span class="end"> &nbsp; </span></button>
+					&nbsp;&nbsp;&nbsp;&nbsp;
+					<button type="submit" class="submit"><span>Continue</span><span class="end"> &nbsp; </span></button>
+				</p>
 
-				</form>
-			</div>
+			</form>
 			<p class="box-footer"><span></span></p>
 		</div>
 		
